<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.UpdateCourseInfoActivity">

    <EditText
        android:id="@+id/updateCourseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/updateCourseInstructor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instructor"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateCourseTitle"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/updateCourseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateCourseInstructor"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/updateCourseStartDate"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:hint="@string/startdate"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateCourseDescription"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/updateCourseEndDate"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/enddate"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/updateCourseStartDate"
        app:layout_constraintTop_toBottomOf="@+id/updateCourseDescription"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/updateCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateCourseDescription"
        app:layout_constraintVertical_bias="0.319" />
</androidx.constraintlayout.widget.ConstraintLayout>